--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
                 <i class="fas fa-search"></i>
             </button>
             <input type="text" name="keySeach" class="form-control-lg custom-input" placeholder="Tìm kiếm trong Drive"
-                   aria-label="Search" aria-describedby="search-icon">
+                aria-label="Search" aria-describedby="search-icon">
         </div>
     </form>
 
@@ -25,35 +25,50 @@
 
     @if ((Model.FolderList != null && Model.FolderList.Any()) || (Model.FileList != null && Model.FileList.Any()))
     {
-        <h5>Thư mục đề xuất</h5>
-        <div class="d-flex justify-content-start gap-5">
-            @foreach (var folder in Model.FolderList)
-            {
-                <div class="card me-2" style="width: 12rem; position: relative;">
-                    <div style="position: absolute; top: 5px; left: 5px;">
-                        <i class="bi bi-star @(folder.Star ? "text-warning" : "")" style="cursor: pointer;"
-                           onclick="toggleFolderFavorite(@folder.FolderId, this)"></i>
-                    </div>
-                    <div class="actions dropdown">
-                        <i class="fas fa-ellipsis-v" id="dropdownMenuButton-@folder.FolderId" data-bs-toggle="dropdown"
-                           aria-expanded="false"></i>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton-@folder.FolderId">
-                            <li><a class="dropdown-item" asp-action="FolderDetail" asp-controller="Folder" asp-route-id="@folder.FolderId">Xem chi tiết</a></li>
-                            <li><a class="dropdown-item" asp-action="Delete" asp-controller="Home" asp-route-id="@folder.FolderId">Xóa</a></li>
-                        </ul>
-                    </div>
-                    <a class="text-decoration-none" asp-action="FolderDetail" asp-controller="Folder" asp-route-id="@folder.FolderId">
-                        <div class="card-body">
-                            <i class="fas fa-folder fa-2x text-dark"></i>
-                            <h6 class="card-title mt-2 text-dark">@folder.FolderName</h6>
-                            <p class="card-text">@folder.CreatedAt</p>
+        if ((Model.FolderList != null) && (Model.FolderList.Any()))
+        {
+            <h5>Thư mục đề xuất</h5>
+            <div class="d-flex justify-content-start gap-5">
+                @foreach (var folder in Model.FolderList)
+                {
+                    <div class="card me-2" style="width: 12rem; position: relative;">
+                        <div style="position: absolute; top: 5px; left: 5px;">
+                            <i class="bi bi-star @(folder.Star ? "text-warning" : "")" style="cursor: pointer;"
+                                onclick="toggleFolderFavorite(@folder.FolderId, this)"></i>
                         </div>
-                    </a>
-                </div>
-            }
-        </div>
+                        <div class="actions dropdown">
+                            <i class="fas fa-ellipsis-v" id="dropdownMenuButton-@folder.FolderId" data-bs-toggle="dropdown"
+                                aria-expanded="false"></i>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton-@folder.FolderId">
+                                <li><a class="dropdown-item" asp-action="FolderDetail" asp-controller="Folder"
+                                        asp-route-id="@folder.FolderId">Xem chi tiết</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#" onclick="openMoveFolderModal('@folder.FolderId')"> Di chuyển</a>
+                                </li>      
+                                <li>
+                                    <a class="dropdown-item" href="#" onclick="openRenameFolderModal('@folder.FolderId')">Đổi tên</a>
+                                </li>
+                                <li><a class="dropdown-item" asp-action="DeleteFolder" asp-controller="Home"
+                                        asp-route-id="@folder.FolderId">Xóa</a></li>
+                            </ul>
+                        </div>
+                        <a class="text-decoration-none" asp-action="FolderDetail" asp-controller="Folder"
+                            asp-route-id="@folder.FolderId">
+                            <div class="card-body">
+                                <i class="fas fa-folder fa-2x text-dark"></i>
+                                <h6 class="card-title mt-2 text-dark">@folder.FolderName</h6>
+                                <p class="card-text">@folder.CreatedAt</p>
+                            </div>
+                        </a>
+                    </div>
+                }
+            </div>
+        }
 
-        <h5 class="mt-4">Tài liệu đề xuất</h5>
+        if ((Model.FileList != null && Model.FileList.Any()))
+        {
+   <h5 class="mt-4">Tài liệu đề xuất</h5>
         <table class="table table-lg" style="width: 110%">
             <thead>
                 <tr>
@@ -100,12 +115,22 @@
                                 </button>
                                 <ul class="dropdown-menu" aria-labelledby="actionDropdown">
                                     <li>
-                                        <a class="dropdown-item text-danger" asp-route-id="@file.FileId" asp-action="Delete" asp-controller="Home">
+                                        <a class="dropdown-item " href="#" onclick="openMoveModal('@file.FileId')">
+                                            <i class="fas fa-folder"></i> Di chuyển
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item " href="#" onclick="openRenameModal('@file.FileId')">
+                                            <i class="fas fa-pen"></i> Đổi tên
+                                        </a>
+                                    </li>
+                                      <li>
+                                        <a class="dropdown-item " asp-route-id="@file.FileId" asp-action="Delete" asp-controller="Home">
                                             <i class="fas fa-trash-alt"></i> Xóa
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item text-success" asp-route-id="@file.FileId" asp-action="Download" asp-controller="File">
+                                        <a class="dropdown-item " asp-route-id="@file.FileId" asp-action="Download" asp-controller="File">
                                             <i class="fas fa-download"></i> Tải xuống
                                         </a>
                                     </li>
@@ -116,7 +141,8 @@
                 }
             </tbody>
         </table>
-}
+        }
 
-@await Html.PartialAsync("_ModelView")
-@await Html.PartialAsync("_Model")
+    }
+
+
