--- a/Views/Navigation/MyFile.cshtml
+++ b/Views/Navigation/MyFile.cshtml
@@ -30,8 +30,18 @@
                         <span class="dropdown-toggle"></span>
                     </i>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton-@folder.FolderId">
-                        <li><a class="dropdown-item" asp-action="FolderDetail" asp-controller="Folder" asp-route-id="@folder.FolderId">Xem chi tiết</a></li>
-                        <li><a class="dropdown-item" asp-action="Delete" asp-controller="Home" asp-route-id="@folder.FolderId">Xóa</a></li>
+                        <li>
+                            <a class="dropdown-item" asp-action="FolderDetail" asp-controller="Folder" asp-route-id="@folder.FolderId">Xem chi tiết</a>
+                        </li>
+                         <li>
+                                    <a class="dropdown-item" href="#" onclick="openMoveFolderModal('@folder.FolderId')"> Di chuyển</a>
+                                </li>      
+                                <li>
+                                    <a class="dropdown-item" href="#" onclick="openRenameFolderModal('@folder.FolderId')">Đổi tên</a>
+                                </li>
+                        <li>
+                            <a class="dropdown-item" asp-action="DeleteFolder" asp-controller="Home" asp-route-id="@folder.FolderId">Xóa</a>
+                        </li>
                     </ul>
                 </div>
                 <a class="text-decoration-none" asp-action="FolderDetail" asp-controller="Folder" asp-route-id="@folder.FolderId">
@@ -60,8 +70,22 @@
                         <span class="dropdown-toggle"></span>
                     </i>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton-@file.FileId">
-                        <li><a class="dropdown-item" asp-route-id="@file.FileId" asp-action="Download" asp-controller="File">Tải xuống</a></li>
-                        <li><a class="dropdown-item" asp-action="Delete" asp-controller="Home" asp-route-id="@file.FileId">Xóa</a></li>
+                        <li>
+                            <a class="dropdown-item" asp-route-id="@file.FileId" asp-action="Download" asp-controller="File">Tải xuống</a>
+                        </li>
+                        <li>
+                                        <a class="dropdown-item " href="#" onclick="openMoveModal('@file.FileId')">
+                                          Di chuyển
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item " href="#" onclick="openRenameModal('@file.FileId')">
+                                            Đổi tên
+                                        </a>
+                                    </li>
+                        <li>
+                            <a class="dropdown-item" asp-action="Delete" asp-controller="Home" asp-route-id="@file.FileId">Xóa</a>
+                        </li>
                     </ul>
                 </div>
 
@@ -90,4 +114,3 @@
     </div>
 }
 <partial name="_Model"></partial>
-@await Html.PartialAsync("_ModelView");
