--- a/Views/Navigation/NearFile.cshtml
+++ b/Views/Navigation/NearFile.cshtml
@@ -18,7 +18,8 @@
         </div>
 
         <div class="d-flex justify-content-start gap-5 mb-5">
-        @foreach (var folder in Model.FolderList)
+            @if((Model.FolderList != null && Model.FolderList.Any())){
+                @foreach (var folder in Model.FolderList)
         {
                     <div class="card me-2" style="width: 12rem; position: relative;">
                         <div style="position: absolute; top: 5px; left: 5px;">
@@ -32,9 +33,13 @@
                             </i>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton-@folder.FolderId">
                                 <li><a class="dropdown-item" href="#">Xem chi tiết</a></li>
-                                <li><a class="dropdown-item" href="#">Tải xuống</a></li>
-                                <li><a class="dropdown-item" href="#">Chỉnh sửa</a></li>
-                                <li><a class="dropdown-item" asp-action="Delete" asp-controller="Home" asp-route-id="@folder.FolderId">Xóa</a></li>
+ <li>
+                                    <a class="dropdown-item" href="#" onclick="openMoveFolderModal('@folder.FolderId')"> Di chuyển</a>
+                                </li>      
+                                <li>
+                                    <a class="dropdown-item" href="#" onclick="openRenameFolderModal('@folder.FolderId')">Đổi tên</a>
+                                </li>                                <li><a class="dropdown-item" href="#">Chỉnh sửa</a></li>
+                                <li><a class="dropdown-item" asp-action="DeleteFolder" asp-controller="Home" asp-route-id="@folder.FolderId">Xóa</a></li>
                             </ul>
                         </div>
 
@@ -47,10 +52,11 @@
                         </a>
                     </div>
         }
+            }
         </div>
-
         <div class="d-flex justify-content-start gap-5">
-        @foreach (var file in Model.FileList)
+            @if((Model.FileList != null && Model.FileList.Any())){
+                   @foreach (var file in Model.FileList)
         {
                     <div class="card me-2" style="width: 12rem;">
                         <div style="position: absolute; top: 5px; left: 5px;">
@@ -63,6 +69,16 @@
                                 <span class="dropdown-toggle"></span>
                             </i>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton-@file.FileId">
+                                <li>
+                                        <a class="dropdown-item " href="#" onclick="openMoveModal('@file.FileId')">
+                                             Di chuyển
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item " href="#" onclick="openRenameModal('@file.FileId')">
+                                            Đổi tên
+                                        </a>
+                                    </li>
                                 <li><a class="dropdown-item" asp-route-id="@file.FileId" asp-action="Download" asp-controller="File">Tải xuống</a></li>
                                 <li><a class="dropdown-item" asp-action="Delete" asp-controller="Home" asp-route-id="@file.FileId">Xóa</a></li>
                             </ul>
@@ -91,7 +107,8 @@
                         </a>
                     </div>
         }
+            }
+     
         </div>
 }
-@await Html.PartialAsync("_Model")
-@await Html.PartialAsync("_ModelView")
+
